--- a/index.html
+++ b/index.html
@@ -6,21 +6,55 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #0f172a;
+      background: linear-gradient(to right, #0f172a, #1f2937);
       color: #e5e7eb;
+      margin: 0;
       padding: 20px;
     }
     h1 {
+      text-align: center;
       color: #38bdf8;
-      text-align: center;
     }
-    p {
-      text-align: center;
+    .card {
+      background: #111827;
+      padding: 20px;
+      border-radius: 12px;
+      margin: 20px auto;
+      max-width: 600px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+    }
+    h2 {
+      color: #22c55e;
     }
   </style>
 </head>
 <body>
   <h1>🚀 Welcome to FutureHub</h1>
-  <p>This website will give you daily updates, future trends, and smart tools.</p>
+  <p style="text-align:center;">Your daily dose of updates, stories, and smart tools.</p>
+
+  <div class="card">
+    <h2>📰 Latest News</h2>
+    <p>Coming soon...</p>
+  </div>
+
+  <div class="card">
+    <h2>🌦️ Weather</h2>
+    <p>Loading weather...</p>
+  </div>
+
+  <div class="card">
+    <h2>📜 Dark Fantasy & History</h2>
+    <p>Explore epic tales and historical legends.</p>
+  </div>
+
+  <div class="card">
+    <h2>🤖 AI & Future Trends</h2>
+    <p>Discover the latest in AI and technology.</p>
+  </div>
+
+  <div class="card">
+    <h2>🎌 Anime News</h2>
+    <p>Stay tuned for anime updates and releases.</p>
+  </div>
 </body>
 </html>
