--- a/index.html
+++ b/index.html
@@ -43,26 +43,29 @@
 
 <script>
   const apiKey = "ef617cdcf2dfc757520ae8c4367d8841"; // your key
-  const city = "Islamabad"; // try a bigger city first
+  const city = "Islamabad"; // test with a bigger city
 
   async function getWeather() {
     try {
       const res = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`);
       const data = await res.json();
+      console.log(data); // 👈 shows full response in browser console
       if (data.main) {
         const temp = data.main.temp;
         const desc = data.weather[0].description;
         document.getElementById("weather").textContent = `${city}: ${temp}°C, ${desc}`;
       } else {
-        document.getElementById("weather").textContent = "City not found or API error.";
+        document.getElementById("weather").textContent = "Error: " + data.message;
       }
     } catch (err) {
       document.getElementById("weather").textContent = "Weather data not available.";
+      console.error(err);
     }
   }
 
   getWeather();
 </script>
+
 
   <div class="card">
     <h2>📜 Dark Fantasy & History</h2>
@@ -80,6 +83,7 @@
   </div>
 </body>
 </html>
+
 
 
 
