--- a/index.html
+++ b/index.html
@@ -66,13 +66,16 @@
     </div>
     <button id="dark-refresh">Refresh</button>
   </section>
-
-  <!-- 🤖 AI & Future Trends -->
-  <div class="card">
-    <h2>🤖 AI & Future Trends</h2>
-    <p>Discover the latest in AI and technology.</p>
+<!-- 🤖 AI & Future Trends -->
+<section id="ai-trends" class="card">
+  <h2>🤖 AI & Future Trends</h2>
+  <div id="ai-content">
+    <p>Loading AI update...</p>
   </div>
+  <button id="ai-refresh">Refresh</button>
+</section>
 
+ 
   <!-- 📰 Anime News -->
   <div class="card">
     <h2>📰 Anime News</h2>
@@ -83,5 +86,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
