--- a/index.html
+++ b/index.html
@@ -74,18 +74,20 @@
   </div>
   <button id="ai-refresh">Refresh</button>
 </section>
-
- 
-  <!-- 📰 Anime News -->
-  <div class="card">
-    <h2>📰 Anime News</h2>
-    <p>Stay tuned for anime updates and releases.</p>
+<!-- 📰 Anime News -->
+<section id="anime-news" class="card">
+  <h2>📰 Anime News</h2>
+  <div id="anime-content">
+    <p>Loading anime update...</p>
   </div>
+  <button id="anime-refresh">Refresh</button>
+</section>
 
   <!-- ✅ Link to your JS -->
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
