--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
     <h2>📄 Latest News</h2>
     <div id="news-content">Coming soon...</div>
   </section>
+<!-- 🌤️ Weather -->
+<section id="weather" class="card">
+  <h2>🌤️ Weather</h2>
+  <div id="weather-content">
+    <p>Loading weather...</p>
+  </div>
+  <button id="weather-refresh">Refresh</button>
+</section>
 
-  <!-- 🌤️ Weather -->
-  <section id="weather" class="card">
-    <h2>🌤️ Weather</h2>
-    <div id="weather-content">Loading weather...</div>
-  </section>
 
   <!-- 🌑 Dark Fantasy & History -->
   <section id="dark-fantasy" class="card">
@@ -87,6 +90,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
