--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
     <h1>🚀 Welcome to FutureHub</h1>
     <p>Your daily dose of updates, stories, and smart tools.</p>
   </header>
+<!-- 📰 Latest News -->
+<section id="latest-news" class="card">
+  <h2>📰 Latest News</h2>
+  <div id="news-content">
+    <p>Loading news...</p>
+  </div>
+  <button id="news-refresh">Refresh</button>
+</section>
 
-  <!-- 📄 News -->
-  <section id="news" class="card">
-    <h2>📄 Latest News</h2>
-    <div id="news-content">Coming soon...</div>
-  </section>
+
 <!-- 🌤️ Weather -->
 <section id="weather" class="card">
   <h2>🌤️ Weather</h2>
@@ -90,6 +94,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
