--- a/index.html
+++ b/index.html
@@ -6,37 +6,64 @@
   <title>FutureHub — Your Daily Smart Updates</title>
 
   <!-- ✅ All CSS goes here, not inside <body> -->
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #121212;
-      color: #f0f0f0;
-      margin: 0;
-      padding: 20px;
-    }
-    .card {
-      background: #1e1e1e;
-      border-radius: 8px;
-      padding: 15px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
-    }
-    h2 {
-      margin-top: 0;
-      color: #00d4ff;
-    }
-    button {
-      background: #00d4ff;
-      color: #121212;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #00aacc;
-    }
-  </style>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #121212;
+    color: #f0f0f0;
+    margin: 0;
+    padding: 20px;
+  }
+
+  .card {
+    background: #1e1e1e;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+  }
+
+  /* 🌑 Dark Fantasy */
+  #dark-content {
+    background: #2b1d1d;
+    border-left: 5px solid #8b0000;
+    padding: 15px;
+    border-radius: 8px;
+  }
+
+  /* 🤖 AI Trends */
+  #ai-content {
+    background: #0d1b2a;
+    border-left: 5px solid #00ffff;
+    padding: 15px;
+    border-radius: 8px;
+  }
+
+  /* 📰 Anime News */
+  #anime-content {
+    background: #1a1a40;
+    border-left: 5px solid #ff69b4;
+    padding: 15px;
+    border-radius: 8px;
+  }
+
+  /* 🌤️ Weather */
+  #weather-content {
+    background: #142d4c;
+    border-left: 5px solid #ffd700;
+    padding: 15px;
+    border-radius: 8px;
+  }
+
+  /* 📰 Latest News */
+  #news-content {
+    background: #202020;
+    border-left: 5px solid #ffffff;
+    padding: 15px;
+    border-radius: 8px;
+  }
+</style>
+
 </head>
 
 <body>
@@ -94,6 +121,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
